...

enum CatalogKind { track, artist, album, playlist }

extension CatalogKindLabel on CatalogKind {
  String get label => switch (this) {
    CatalogKind.track => 'Треки',
    CatalogKind.artist => 'Артисты',
    CatalogKind.album => 'Альбомы',
    CatalogKind.playlist => 'Плейлисты',
  };
  String get field => switch (this) {
    CatalogKind.track => 'tracks',
    CatalogKind.artist => 'artists',
    CatalogKind.album => 'releases',
...
