...
                            Wrap(
                              spacing: 12,
                              children: [
                                if (pairs != null ||
                                    data.translation?.trim().isNotEmpty == true)
                                  FilterChip(
                                    label: const Text('Перевод'),
                                    selected: pairs != null
                                        ? inlineTranslation
                                        : translation,
                                    onSelected: (v) => setState(() {
                                      if (pairs != null) {
                                        inlineTranslation = v;
...
